--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,26 +2,25 @@ cmake_minimum_required(VERSION 2.8)
 project(METIS)
 
 set(GKLIB_PATH "GKlib" CACHE PATH "path to GKlib")
-#set(SHARED TRUE CACHE BOOL "build a shared library")
+set(SHARED FALSE CACHE BOOL "build a shared library")
 
 if(MSVC)
   set(METIS_INSTALL FALSE)
-else(MSVC)
+else()
   set(METIS_INSTALL TRUE)
-endif(MSVC)
+endif()
 
 # Configure libmetis library.
-#if(SHARED)
+if(SHARED)
   set(METIS_LIBRARY_TYPE SHARED)
-#else(SHARED)
-  #set(METIS_LIBRARY_TYPE STATIC)
-#endif(SHARED)
+else()
+  set(METIS_LIBRARY_TYPE STATIC)
+endif(SHARED)
 
-##include(${GKLIB_PATH}/GKlibSystem.cmake)
+include(${GKLIB_PATH}/GKlibSystem.cmake)
 # Add include directories.
 include_directories(${GKLIB_PATH})
 include_directories(include)
-add_subdirectory(${GKLIB_PATH})
 # Recursively look for CMakeLists.txt in subdirs.
 add_subdirectory("include")
 add_subdirectory("libmetis")
