--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(m2gmetis m2gmetis.c cmdline_m2gmetis.c io.c)
 add_executable(graphchk graphchk.c io.c)
 add_executable(cmpfillin cmpfillin.c io.c smbfactor.c)
 foreach(prog gpmetis ndmetis mpmetis m2gmetis graphchk cmpfillin)
-  target_link_libraries(${prog} metis GKlib)
+  target_link_libraries(${prog} metis)
 #  target_link_libraries(${prog} metis profiler)
 endforeach(prog)
 
