--- a/libmetis/CMakeLists.txt
+++ b/libmetis/CMakeLists.txt
@@ -4,6 +4,9 @@ include_directories(.)
 file(GLOB metis_sources *.c)
 # Build libmetis.
 add_library(metis ${METIS_LIBRARY_TYPE} ${GKlib_sources} ${metis_sources})
+IF (MSVC)
+    SET_PROPERTY(TARGET metis PROPERTY FOLDER "METIS_PACKAGE")
+ENDIF ()
 if(UNIX)
   target_link_libraries(metis m)
 endif()
