--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -10,6 +10,9 @@ add_executable(graphchk graphchk.c io.c)
 add_executable(cmpfillin cmpfillin.c io.c smbfactor.c)
 foreach(prog gpmetis ndmetis mpmetis m2gmetis graphchk cmpfillin)
   target_link_libraries(${prog} metis)
+  IF (MSVC)
+      SET_PROPERTY(TARGET ${prog} PROPERTY FOLDER "METIS_PACKAGE")
+  ENDIF ()
 #  target_link_libraries(${prog} metis profiler)
 endforeach(prog)
 
