update cmake system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,4 @@ include_directories(include)
 add_subdirectory("include")
 add_subdirectory("libmetis")
 add_subdirectory("programs")
+MESSAGE(STATUS "    Compiling METIS done")
