--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -18,7 +18,7 @@ endforeach (prog)
 
 if (METIS_INSTALL)
     install(TARGETS gpmetis ndmetis mpmetis m2gmetis graphchk cmpfillin
-            RUNTIME DESTINATION bin)
+            RUNTIME DESTINATION ${INSTALL_DIR})
 endif ()
 
 # Try to find subversion revision.
