update cmake and support mingw64

--- a/libmetis/CMakeLists.txt
+++ b/libmetis/CMakeLists.txt
@@ -10,10 +10,15 @@ ENDIF ()
 if (UNIX)
     target_link_libraries(metis m)
 endif ()
-
+# refers to https://github.com/Alexpux/MINGW-packages/tree/master/mingw-w64-metis
+if(WIN32)
+  set(RT_DEST bin)
+else()
+  set(RT_DEST lib)
+endif()
 if (METIS_INSTALL)
     install(TARGETS metis
             LIBRARY DESTINATION lib
-            RUNTIME DESTINATION lib
+            RUNTIME DESTINATION ${RT_DEST}
             ARCHIVE DESTINATION lib)
 endif ()
