Support using OpenMP in Xcode

--- a/GKlib/CMakeLists.txt
+++ b/GKlib/CMakeLists.txt
@@ -11,6 +11,13 @@ add_library(GKlib STATIC ${GKlib_sources})
 if (UNIX)
     target_link_libraries(GKlib m)
 endif (UNIX)
+### For Xcode generator, specific LLVM-Clang installed by brew, and add link library of OpenMP explicitly.
+IF(XCODE AND LLVM_FOUND)
+    TARGET_LINK_LIBRARIES(GKlib ${OpenMP_LIBRARY})
+    SET_TARGET_PROPERTIES(GKlib PROPERTIES XCODE_ATTRIBUTE_CC ${LLVM_ROOT_DIR}/bin/clang)
+    SET_TARGET_PROPERTIES(GKlib PROPERTIES XCODE_ATTRIBUTE_CXX ${LLVM_ROOT_DIR}/bin/clang++)
+    SET_TARGET_PROPERTIES(GKlib PROPERTIES XCODE_ATTRIBUTE_COMPILER_INDEX_STORE_ENABLE "No")
+ENDIF()
 
 include_directories("test")
 add_subdirectory("test")
